--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
             left:0;
             right:0;
             z-index:-1; /* needed to keep in the background */
-            background: url('web/bg.jpg') center center;
+            background: url('bg.jpg') center center;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -62,6 +62,8 @@
 
         i {
             color: #fff;
+            width: 1.2em;
+            text-align: center;
         }
         span {
             padding-left: 0.75em;
@@ -109,7 +111,8 @@
             <li><a href="https://github.com/goph-R/dynart-micro"><i class="fa-brands fa-github"></i><span>Source code on GitHub</span></a></li>
             <li><a href="https://packagist.org/packages/dynart/micro"><i class="fa-solid fa-box-archive"></i><span>PHP Package on Packagist</span></a></li>
             <li><a href="https://github.com/goph-R/dynart-micro-test"><i class="fa-solid fa-square-check"></i><span>Tests on GitHub</span></a></li>
-            <li><a href="/docs/api"><i class="fa-solid fa-book"></i><span>API documentation</span></a></li>
+            <li><a href="/reports/coverage-html"><i class="fa-solid fa-chart-simple"></i><span>Test coverage report</span></a></li>
+            <li><a href="/docs/api"><i class="fa-solid fa-file"></i><span>API documentation</span></a></li>
         </ul>
         <p>Install with composer:</p>
 <pre>
